Update the UpdateChecker